some error fixs

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             from <a href="https://www.lpu.in/">Lovely Professional University</a>, Punjab. I am currently working as <a href="https://en.wikipedia.org/wiki/Web_developer">Web Developer</a> to learn more about coding in different languages so that I
             can
             use
-            them in my upcoming project whuch requires knowledge of
+            them in my upcoming project which requires knowledge of
             both <a href="https://en.wikipedia.org/wiki/Mechanical_engineering">Mechanical Engineering</a> and
             Information Technology.
           </p>
@@ -54,7 +54,7 @@
     </thead>
     <tbody>
       <tr>
-        <td>2017-2018</td>
+        <td>2017-2019</td>
         <td>Service Engineer at <a href="https://koel.kirloskar.com/">Kirloskar Oil Engines Limited (KOEL)</a></td>
       </tr>
       <tr>
@@ -76,7 +76,7 @@
             </tr>
             <tr>
               <td>CSS</td>
-              <td>★★☆☆☆</td>
+              <td>★★★☆☆</td>
             </tr>
           </table>
         </td>
