some changes in contact details

--- a/contactDetails.html
+++ b/contactDetails.html
@@ -7,16 +7,13 @@
   <body>
     <h3>Address:</h3>
     <p>
-      Kanak Kunj,<br>
-      Gangotri Enclave,<br>
-      Badripur Road, Indrapur,<br>
-      Dehradun-248005, Uttarakhand,<br>
+      Dehradun, Uttarakhand,<br>
       India<br>
-      Mobile Number: +917417610261<br>
-      My Email: er.saketbrijsinha@gmail.com
+      Mobile Number: *********<br>
+      My Email: samleonhart0407gmail.com
       </p>
       <hr>
-      <form action="mailto:er.saketbrijsinha@gmail.com" method="post" enctype="text/plain">
+      <form action="mailto:samleonhart0407gmail.com" method="post" enctype="text/plain">
         <label for="">Your Name:</label>
         <input type="text" name="yourName" value=""><br>
         <label for="">Your Email:</label>
