--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             use
             them in my upcoming project which requires knowledge of
             both <a href="https://en.wikipedia.org/wiki/Mechanical_engineering">Mechanical Engineering</a> and
-            Information Technology.
+            <a href="https://en.wikipedia.org/wiki/Information_technology">Information Technology</a>.
           </p>
         </td>
       </tr>
