--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <tr>
         <td><img src="Images\myPhotoCircle.png" alt="saket profile picture" style="width: 225px" /></td>
         <td>
-          <h1>Saket Brij Sinha</h1>
+          <h1>Saket Sinha</h1>
           <p><em>Assistant Software Engineer at <strong><a href="https://giix.ai/">GiiX</a></strong></em></p>
           <p>
             I am Assistant Software Developer at <a href="https://giix.ai/">Global information interchnage Xchange</a>. I have worked in <a href="https://en.wikipedia.org/wiki/Mechanical_engineering">Mechanical Engineering</a> field for almost 2
